--- a/.gitignore
+++ b/.gitignore
@@ -1,56 +1,26 @@
+.DS_Store
+node_modules
+/dist
+
+/tests/e2e/videos/
+/tests/e2e/screenshots/
+
+
 # local env files
 .env.local
 .env.*.local
 
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
-
-######################
-# Node
-######################
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-######################
-# Eclipse
-######################
-.project
-.classpath
-.settings/
-
-######################
-# Intellij
-######################
-.idea/
-
-######################
-# Visual Studio Code
-######################
-.vscode/
-
-######################
-# Mac OSX
-######################
-.DS_Store
-
-######################
-# Directories
-######################
-/dist/
-/tests/e2e/videos/
-#/tests/e2e/screenshots/ commité pour garder une trace du test
-
-######################
-# Logs
-######################
-*.log*
-
-######################
-# ESLint
-######################
-.eslintcache
