--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.0-0",
+    "overmind": "27.0.0",
+    "overmind-vue": "27.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
